modified:   client/package-lock.json 	modified:   client/package.json 	modified:   client/public/index.html 	new file:   client/src/components/SpiderChart.js 	new file:   client/src/components/common/KeyboardHint.js 	modified:   client/src/components/common/Navbar.js 	new file:   client/src/components/consultation/ZoomMeeting.js 	new file:   client/src/contexts/SocketContext.js 	new file:   client/src/hooks/useFinancialData.js 	modified:   client/src/pages/FInancialPlanning.js 	modified:   client/src/pages/Home.js 	modified:   client/src/styles/GlobalStyles.js 	new file:   client/src/styles/theme.js 	new file:   client/src/utils/loadScript.js 	modified:   package-lock.json 	modified:   package.json 	new file:   server/app.js 	new file:   server/config/emailConfig.js 	new file:   server/config/razorpayConfig.js 	new file:   server/config/socketConfig.js

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Financial Services</title>
+    <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.13.0/css/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="https://source.zoom.us/2.13.0/css/react-select.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
